# climatiq

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  doc-freshness.yml
config/: example-home.yaml
docs/: architecture.md  device-inventory.md
docs/reference/: climate-engine.html  master-plan.html  s8-hub-guide.html  science-foundation.html
hardware/: s8-setup-guide.md  shopping-list.md  vivax-ac-research.md
homeassistant/: automations.yaml  configuration.yaml  inputs.yaml  templates.yaml
homeassistant/integrations/: esphome.md  openmeteo.md  shelly.md  smarthome-wp6003.md  waqi.md  xiaomi-ble.md  xiaomi-miio.md  xiaomi-miot.md
src/climatiq/: __init__.py  config.py
src/climatiq/comfort/: __init__.py  dew_point.py  pmv.py  score.py  thresholds.py
src/climatiq/controllers/: __init__.py  deadband.py  engine.py  feedforward.py  priority.py  schedule.py
src/climatiq/models/: __init__.py  comfort.py  devices.py  environment.py  home.py  schedule.py  sensors.py
src/climatiq/providers/: __init__.py  base.py
tests/: conftest.py
tests/test_comfort/: __init__.py  test_dew_point.py  test_pmv.py  test_score.py
tests/test_controllers/: test_deadband.py  test_feedforward.py  test_priority.py  test_schedule.py
tests/test_models/: test_comfort.py  test_home.py  test_sensors.py
