[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climatiq"
version = "0.1.0"
description = "ASHRAE 55-based smart home climate intelligence framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ilija Panov" },
]
keywords = [
    "home-assistant",
    "hvac",
    "ashrae-55",
    "iso-7730",
    "pmv",
    "thermal-comfort",
    "smart-home",
    "climate-control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "pythermalcomfort>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pyyaml>=6.0",
]
solar = [
    "astral>=3.0",
]

[project.scripts]
climatiq-pmv = "climatiq.comfort.pmv:main"
climatiq-comfort = "climatiq.comfort.score:main"

[tool.hatch.build.targets.wheel]
packages = ["src/climatiq"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]
ignore = ["E501", "TC001"]

[tool.ruff.lint.isort]
known-first-party = ["climatiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pythermalcomfort.*"
ignore_missing_imports = true
